# will_mmctf_challenges

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yaml
challenge/: __init__.py  views.py
challenge/static/: script.js  skeleton.txt  style.css
challenge/templates/: challenge1.html  challenge2.html  index.html  layout.html  step1.html
docker/: Dockerfile  dev-compose.yaml  prod-compose.yaml
