[tool.poetry]
name = "challenge-template"
version = "0.1.1"
description = "SUCSS Challenge template"
authors = ["Skyler Mansfield <skyler.mansfield.21@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
dev = "challenge:main"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
Flask-WTF = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
